basic-css-drills-part2

--- a/exercises/basic-css-drills-part1/css/drill.css
+++ b/exercises/basic-css-drills-part1/css/drill.css
@@ -29,11 +29,11 @@
 
 /* Drill 5 - Write your code solution below */
 #d5-p1 {
-    background-color:pink
+    background-color:pink;
 }
 #d5-div1{
-    background-color:peachpuff 
+    background-color:peachpuff; 
 }
 #d5-p2 {
-    background-color:lightcoral
+    background-color:lightcoral;
 }
