upside-down-tetris

--- a/exercises/upside-down-tetris/css/style.css
+++ b/exercises/upside-down-tetris/css/style.css
@@ -18,3 +18,13 @@
     background-color: red;
     border-color: crimson;
 }
+
+.green {
+    background-color: green;
+    border-color: green;
+}
+
+.blue {
+    background-color: blue;
+    border-color: blue;
+}
