--- a/product-showcase-site/css/style.css
+++ b/product-showcase-site/css/style.css
@@ -6,3 +6,50 @@ body {
     margin: 0px;
     font-family: sans-serif;
 }
+
+.heeled-boot {
+    background-color: #fbe888;padding: 36px 0px;
+    width: 50%;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.single-column-1 {
+    background-color: #fbe888;
+    padding: 80px 0px
+}
+
+#h1-1,
+#h1-2,
+#h1-3 {
+    text-align: center;
+}
+
+.boot {
+    background-color: gray;
+    color: #fbe888;
+    width:50%;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.single-column-2 {
+    background-color: gray;
+    padding:80px 0px
+}
+
+.platform-shoe {
+    background-color: black;
+    color:white;
+    width:50%;
+    min-width: 500px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.single-column-3 {
+    background-color: black;
+    padding:80px 0px;
+}
