--- a/metube/css/style.css
+++ b/metube/css/style.css
@@ -88,6 +88,26 @@ body {
     width: 100%;
 }
 
+.youtube-item-2 img {
+    width: 100%;
+}
+
+.youtube-item-3 img {
+    width: 100%;
+}
+
+.youtube-item-4 img {
+    width: 100%;
+}
+
+.youtube-item-5 img {
+    width: 100%;
+}
+
+.youtube-item-6 img {
+    width: 100%;
+}
+
 .youtube-item h4 a {
     text-decoration: none;
     color: #111111;
