--- a/metube/css/style.css
+++ b/metube/css/style.css
@@ -86,26 +86,8 @@ body {
 }
 .youtube-item img {
     width: 100%;
-}
-
-.youtube-item-2 img {
-    width: 100%;
-}
-
-.youtube-item-3 img {
-    width: 100%;
-}
-
-.youtube-item-4 img {
-    width: 100%;
-}
-
-.youtube-item-5 img {
-    width: 100%;
-}
-
-.youtube-item-6 img {
-    width: 100%;
+   aspect-ratio: 16/9;
+    object-fit: cover;
 }
 
 .youtube-item h4 a {
