--- a/exercises/pokemon-cards/css/style.css
+++ b/exercises/pokemon-cards/css/style.css
@@ -7,14 +7,90 @@
     Just be aware that you may break some
     of the setup.css styling if you do so.
 */
-
 .card-style-3 {
+    max-width: 350px;
+    align-items: center;
+    border-radius: 10px;
+    margin: 20px;
+}
+
+#pokemon-card-1 {
     width: 350px;
     margin: 24px;
     background: linear-gradient(to bottom right, white, lightblue,
     lightblue);
+    padding: 40px;
+    border: 10px solid lightblue;
 }
+
 .card-style-3 img {
-    width: 85%
-    
+    width: 100%   
+}
+
+#pokemon-card-1 img {
+    width: 100%;
+    border:5px solid lightblue;
+}
+
+#pokemon-card-2 img {
+    width: 100%;
+    border:5px solid pink;
+}
+
+ #pokemon-card-2 {
+    width: 350px;
+    margin: 24px;
+    background: linear-gradient(to bottom right, white, pink,
+    purple);
+    padding:40px;
+    border: 10px solid pink;
+}
+
+#pokemon-card-3 {
+    width: 350px;
+    margin: 24px;
+    background: linear-gradient(to bottom right, white, orange,
+    purple,yellow);
+    padding:40px;
+    border: 10px solid orange;
+}
+
+#pokemon-card-3 img {
+    width: 100%;
+    border:5px solid orange;
+}
+
+#pokemon-card-4 {
+    width: 350px;
+    margin: 24px;
+    background: linear-gradient(to bottom right, white, lightblue,green);
+    padding:40px;
+    border: 10px solid lightblue;
+}
+
+#pokemon-card-4 img {
+    width: 100%;
+    border:5px solid lightblue;
+}
+
+.details {
+    background-color:white;
+    font-size: 12px;
+}
+
+.attack {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 2px solid black;
+}
+
+.pokemon-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.pokemon-header .health {
+    font-size: 20px;
 }
