--- a/exercises/animagram-cards/css/style.css
+++ b/exercises/animagram-cards/css/style.css
@@ -8,20 +8,30 @@
     of the setup.css styling if you do so.
 */
 .card-style-2 {
-    border-radius: 8%;
+    border-radius: 24px;
     max-width: 350px;
     background-color: white;
-    margin: 24px
-}
-
-.card-style-2 img {
-    width: 60%;
-    border-radius: 200%;
-    align-items: baseline;
+    margin: 24px;
+    padding: 20px;
+    align-items: center;
 }
 
 .animagram-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.profile-pic-container img {
+    width: 100%;
+    border-radius: 50%;
+}
+
+.profile-pic-container {
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.animagram-footer span i {
+    color: blueviolet;
 }
