--- a/exercises/animagram-cards/css/style.css
+++ b/exercises/animagram-cards/css/style.css
@@ -41,5 +41,9 @@
     display: flex;
     justify-content: space-between;
     font-size: 24px;
-    padding-top: 50px;
+    padding-top: 62px;
+}
+
+h2 {
+    text-align: center;
 }
