--- a/exercises/themed-gallery-page/css/style.css
+++ b/exercises/themed-gallery-page/css/style.css
@@ -7,8 +7,8 @@ body {
     font-family: sans-serif;
 }
 
-#hero-3 {
-    background-image: url("..images/bora bora 1");
+#hero {
+    background-image: url("../images/bora\ bora\ 1.jpg");
     height: 100vh;
     background-size: cover;
     background-position: center center;
@@ -16,29 +16,41 @@ body {
     margin-bottom: 100px;
 }
 
-#hero-3 .hero-content {
+#hero .hero-content {
     position: absolute;
-    top: 10%;
-    left: 15%;
+    top: 100PX;
+    left: 100PX;
 }
 
-#hero-3 h2 {
+#hero h2 {
     font-size: 72px;
     margin-bottom: 36px;
+    background-color: aquamarine;
+    color: black;
 }
 
-#hero-3 h4 {
+#hero h4 {
     font-size: 24px;
     margin: 0px;
+    
 }
 
-#hero-3 a {
-    font-size: 14px;
-    display: inline-block;
-    background-color: #333333;
-    color: white;
-    text-decoration: none;
+#layout {
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
+    
+.cropped-grid-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 200px;
     padding: 24px;
-    margin-top: 36px;
-    margin-right: 24px;
+    border: 10px solid #333333;
+}
+    
+.cropped-grid-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
