--- a/exercises/three-heroes/css/style.css
+++ b/exercises/three-heroes/css/style.css
@@ -6,3 +6,116 @@ body {
     margin: 0px;
     font-family: sans-serif;
 }
+
+#hero-1 {
+    background-image: url("../images/focus.jpg");
+    height: 100vh;background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    position: relative;
+    margin-bottom: 100px;
+}
+    
+#hero-1 .hero-content {
+    text-align: right;
+    position: absolute;
+    top: 5%;
+    right: 10%;
+}
+    
+#hero-1 h2 {
+    font-size: 120px;
+    margin-bottom: 60px;
+    color: white;
+}
+    
+#hero-1 h4 {
+    font-size: 48px;
+}
+    
+    
+#main {
+    height: 100vh;
+}
+    
+h1 {
+    font-size: 36px;
+}
+    
+p {
+    font-size: 20px;
+}
+
+#hero-3 {
+    background-image: url("../images/strength.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#hero-3 .hero-content {
+    text-align: center;
+    color: white;
+    padding-top: 100px;
+}
+
+#hero-3 h4 {
+    font-size: 24px;
+    margin: 0px;
+}
+
+#hero-3 a {
+    font-size: 14px;
+    display: inline-block;
+    background-color: white;
+    color: #333333;
+    text-decoration: none;
+    padding: 24px;
+    margin-top: 36px;
+    margin-right: 12px;
+    margin-left: 12px;
+}
+
+#hero-3 h2 {
+    font-size: 100px;
+}
+
+#hero-2 {
+    background-image: url("../images/beach\ side.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+    margin-bottom: 100px;
+}
+    
+#hero-2 a {
+    font-size: 14px;
+    display: inline-block;
+    background-color: white;
+    color: rgb(24, 127, 164);
+    text-decoration: none;
+    padding: 24px;
+    position: absolute;
+    text-size-adjust: 26px;
+    right: 20%;
+    bottom: 41%;
+
+}
+
+#hero-2 h1 {
+    color: white;
+    justify-items: center;
+    position:absolute;
+    right: 50%;
+    bottom: 50%;
+    font-size: 100px;
+    text-shadow: 10px 10px 5px rgb(99, 174, 184);
+}
