--- a/exercises/grrm/css/style.css
+++ b/exercises/grrm/css/style.css
@@ -439,4 +439,35 @@ body {
     Media Queries Styling
 **************************************************************/
 /* TODO: Write your media queries here */
-@media screen and 
+
+/* Tablet Breakpoint View */
+@media screen and (max-width: 1000px) and (min-width: 800px) {
+    body {
+        background: red;
+    }
+
+    #grid-layout {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-areas: 
+        " header header header"
+        " navbar navbar navbar"
+        " banner banner banner"
+        " card-1 card-2 card-3"
+        " aside  blog  blog"
+        " footer footer footer"
+        " bottom bottom bottom";
+    }
+
+    #nav {
+        flex-wrap: wrap;
+    }
+
+    #nav a {
+        flex: 230px;
+    }
+}
+
+/* Mobile Breakpoint View */
+@media screen and (max-width: 800px) {
+    
+}
