--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -7,6 +7,46 @@ body {
     font-family: sans-serif;
 }
 
+#hero-1 {
+background-image: url("../images/hero\ medium.jpg");
+height: 100vh;
+background-size: cover;
+background-position: center center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-end;
+position: relative;
+margin-bottom: 100px;
+}
+
+#hero-1 h2 {
+font-size: 72px;
+position: absolute;
+right: 20%;
+bottom: 80%;
+color: orange;
+}
+
+#hero-1 h4 {
+font-size: 24px;
+position: absolute;
+right: 20%;
+bottom: 78%;
+color: orange;
+}
+
+#hero-1 a {
+font-size: 14px;
+display: inline-block;
+background-color: red;
+color: white;
+text-decoration: none;
+padding: 24px;
+position: absolute;
+right: 20%;
+bottom: 41%;
+}
 
 #navbar {
     background: linear-gradient(
@@ -73,12 +113,12 @@ body {
     visibility: visible;
 }
     
-    .dropdown-menu a {
+.dropdown-menu a {
     background-color: red;
     width: 100%;
     min-width: 200px;
 }
     
-    #navbar .dropdown-menu a:hover {
+#navbar .dropdown-menu a:hover {
     background: orange;
 }
