--- a/exercises/hover-galleries/css/style.css
+++ b/exercises/hover-galleries/css/style.css
@@ -7,28 +7,26 @@ body {
     font-family: sans-serif;
 }
 
-#card-content {
+.card-content {
     display: flex;
     flex-wrap: wrap;
-    align-items: flex-start;
 }
 
 .card {
-    flex: 300px;
-    border: 3px solid black;
-    margin: 24px;
-    padding: 24px;
-    border-radius: 12px;
-    text-align: center;
+    display: flex;
 }
 
 .card a {
     text-decoration: double;
     color: solid brown;
-    display: block;
     border: 3px solid black;
     padding: 12px;
     margin-top: 36px;
+}
+
+#card-1 {
+    color:blueviolet;
+    border: 10px solid;
 }
 
 
