--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -5,6 +5,7 @@
 body {
     margin: 0px;
     font-family: sans-serif;
+    background-image: url("../images/paw-print-941499_640.jpg");
 }
 
 #hero-1 {
@@ -18,6 +19,7 @@ justify-content: center;
 align-items: flex-end;
 position: relative;
 margin-bottom: 100px;
+z-index: -1;
 }
 
 #hero-1 h2 {
@@ -122,3 +124,29 @@ bottom: 41%;
 #navbar .dropdown-menu a:hover {
     background: orange;
 }
+
+.dog-1 h2 {
+    font-size: 50px;
+    color: orangered;
+    right: 20%;
+    bottom: 78%;
+    position: absolute;
+}
+
+.dog-1 h3 {
+    font-size: 19px;
+    color: black;
+    right: 7%;
+    bottom: 78%;
+    position: absolute;
+}
+
+#background-layout {
+    background-color: whitesmoke;
+    border-radius: 60px;
+    padding: 24px 48px;
+    max-width: 800px;
+    margin: 48px auto;
+    text-align: center;
+}
+
