--- a/dropdown-menu-site/css/style.css
+++ b/dropdown-menu-site/css/style.css
@@ -9,45 +9,45 @@ body {
 }
 
 #hero-1 {
-background-image: url("../images/hero\ medium.jpg");
-height: 100vh;
-background-size: cover;
-background-position: center center;
-display: flex;
-flex-direction: column;
-justify-content: center;
-align-items: flex-end;
-position: relative;
-margin-bottom: 100px;
-z-index: -1;
+    background-image: url("../images/hero\ medium.jpg");
+    height: 100vh;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    position: relative;
+    margin-bottom: 100px;
+    z-index: -1;
 }
 
 #hero-1 h2 {
-font-size: 72px;
-position: absolute;
-right: 20%;
-bottom: 80%;
-color: orange;
+    font-size: 72px;
+    position: absolute;
+    right: 2%;
+    bottom: 80%;
+    color: orange;
 }
 
 #hero-1 h4 {
-font-size: 24px;
-position: absolute;
-right: 20%;
-bottom: 78%;
-color: orange;
+    font-size: 24px;
+    position: absolute;
+    right: 4%;
+    bottom: 78%;
+    color: orange;
 }
 
 #hero-1 a {
-font-size: 14px;
-display: inline-block;
-background-color: red;
-color: white;
-text-decoration: none;
-padding: 24px;
-position: absolute;
-right: 20%;
-bottom: 41%;
+    font-size: 14px;
+    display: inline-block;
+    background-color: red;
+    color: white;
+    text-decoration: none;
+    padding: 24px;
+    position: absolute;
+    right: 13%;
+    bottom: 69%;
 }
 
 #navbar {
@@ -132,7 +132,7 @@ bottom: 41%;
 
 .dog-1 h3 {
     font-size: 19px;
-    color: black;
+    color: orangered;
 }
 
 #background-layout {
@@ -143,4 +143,3 @@ bottom: 41%;
     margin: 48px auto;
     text-align: center;
 }
-
