--- a/Projects/restaurant/css/style.css
+++ b/Projects/restaurant/css/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 #home-page {
-    background-image: url("../images/night\ time\ resturant\ 1\ .jpg");
+    background-image: url("../images/24\ picture.avif");
     height: 100vh;
     background-size: cover;
     background-position: center center;
