--- a/Projects/restaurant/css/style.css
+++ b/Projects/restaurant/css/style.css
@@ -7,6 +7,45 @@ body {
     font-family: sans-serif;
 }
 
+#navbar {
+    background: linear-gradient(
+        to bottom,
+        rgb(49, 27, 3),
+        rgb(192, 158, 99)
+    );
+    display: flex;
+    align-items: center;
+}
+
+#navbar a {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    padding: 24px;
+}
+
+#navbar #logo {
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 36px;
+}
+
+#navbar a:hover {
+    background: linear-gradient(
+        to top,
+        rgb(192, 158, 99),
+        rgb(49, 27, 3)
+    );
+}
+
+#navbar #logo {
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 36px;
+    padding-top: 12px;
+    padding-bottom: 13px;
+}
+
 #home-page {
     background-image: url("../images/24\ picture.avif");
     height: 100vh;
@@ -43,4 +82,47 @@ body {
     position: absolute;
     right: 20%;
     bottom: 41%;
+}
+
+#cards-container {
+    display:flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+.card {
+    flex: 300px;
+    border: 3px solid black;
+    margin: 24px;
+    padding: 24px;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.card-container {
+    position: relative;
+}
+
+.card-container {
+    position: absolute;
+    background-color: white;
+    border: 3px solid black;
+    border-radius: 12px;
+    box-shadow: 4px 4px 4px #00000033;
+    left: 0px;
+    margin: 0px 24px;
+    padding: 24px;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-8px);
+    transition: 
+    opacity 0.5s,
+    visibility 0.5s,
+    transform 0.5s;
+}
+
+.card-container {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0px);
 }
