--- a/Projects/final-eval/css/style.css
+++ b/Projects/final-eval/css/style.css
@@ -47,13 +47,14 @@ body {
     min-width: 500px;
     margin-left: auto;
     margin-right: auto;
-}
 
-.single-column {
-    
 }
-     
+   
 .light-container {
+    justify-content: center;
     padding: 48px 0px;
 }
-    
+
+.dark-container {
+    justify-content:center;
+}
