--- a/Projects/restaurant/css/style.css
+++ b/Projects/restaurant/css/style.css
@@ -25,10 +25,8 @@ body {
     padding: 24px;
 }
 
-#navbar #logo {
-    margin-right: auto;
-    font-weight: bold;
-    font-size: 36px;
+#navbar #logo img {
+width: 250px;
 }
 
 #navbar a:hover {
@@ -65,13 +63,16 @@ body {
     font-size: 72px;
     position: absolute;
     right: 20%;
-    bottom: 50%;
+    bottom: 70%;
     color: white;
     padding: 100px;
 }
 
 #home-page h1 {
     color: white;
+    right: 37%;
+    bottom: 34%;
+    position: relative;
 }
     
 #home-page a {
@@ -95,7 +96,7 @@ body {
     padding: 24px;
     position: absolute;
     right: 46%;
-    bottom: 40%;
+    bottom: 24%;
 }
 
 #cards-container {
@@ -220,6 +221,11 @@ body {
     /* body {
         background-color: firebrick;
     } */
+    #navbar {
+        flex-direction: column;
+        align-items: center;
+    }
+
 }
 
 /* Tablet Breakpoint View, adjust size in html preview */
