--- a/Projects/restaurant/css/style.css
+++ b/Projects/restaurant/css/style.css
@@ -1,9 +1,9 @@
 * {
     box-sizing: border-box;
+    margin: 0px;
 }
 
 body {
-    margin: 0px;
     font-family: sans-serif;
     background-color: #a57342;
 }
@@ -56,16 +56,13 @@ width: 250px;
 
 #home-page {
     position: absolute;
-    top: 40%;
-    left: 50%;
+    left: 15%;
+    padding: 15px;
 }
         
 #home-page h2 {
     font-size: 72px;
-
-
     color: white;
-    padding: 100px;
 }
 
 #home-page h1 {
@@ -157,6 +154,10 @@ width: 250px;
     justify-content: space-between;
 }
 
+#menu-card {
+    display: flex;
+    flex-wrap: wrap;
+}
 .card-1 {
    display: inline-block;
    width: 450px;
