--- a/Projects/restaurant/css/style.css
+++ b/Projects/restaurant/css/style.css
@@ -114,7 +114,6 @@ width: 250px;
     border-radius: 12px;
     box-shadow: 4px 4px 4px #00000033;
     left: 0px;
-    margin: 0px 24px;
     padding: 24px;
     opacity: 0;
     visibility: hidden;
@@ -157,13 +156,13 @@ width: 250px;
 #menu-card {
     display: flex;
     flex-wrap: wrap;
+    gap:24px;
+    justify-content: center;
 }
 .card-1 {
    display: inline-block;
    width: 450px;
    position: relative;
-  
-
 }
 
 .card-2 {
